webdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
        - name: webdb
          image: leduc34/webdb:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
          args:
            - /bin/sh
            - -c
            - touch /tmp/healthy; sleep 60; rm -f /tmp/healthy; sleep 600
          livenessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 5
