webdb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
spec:
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
